--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,22 @@
 html {
   scroll-behavior: smooth;
 }
+// src/styles.scss
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; // Wichtig für korrekte Breitenberechnung
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden; // Verhindert unschönes horizontales Scrollen
+   scroll-behavior: smooth;
+}
+
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
