feat: replace burger icon image with animated css burger component

--- a/src/app/moduls/components/hero/hero-header/hero-header-nav/hero-header-nav.component.html
+++ b/src/app/moduls/components/hero/hero-header/hero-header-nav/hero-header-nav.component.html
@@ -1,1 +1,5 @@
-<img src="assets/img/icons/burgerBtnWhite.svg" alt="Button for Language Choose">
+<div class="burger-icon" [class.open]="isMenuOpen" (click)="isMenuOpen = !isMenuOpen">
+  <span></span>
+  <span></span>
+  <span></span>
+</div>
