--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,9 @@
+<section id="hero">
+  <div class="container">
+    <app-hero></app-hero>
+  </div>
+</section>
+
 <section id="about">
   <div class="container">
     <app-about></app-about>
@@ -28,4 +34,11 @@
   </div>
 </section>
 
-<app-footer></app-footer>
+
+
+
+<section id="contact">
+  <div class="container">
+   <app-footer id="footer"></app-footer>
+  </div>
+</section>
