--- a/src/app/pages/legalnotice/lealnotice.component.html
+++ b/src/app/pages/legalnotice/lealnotice.component.html
@@ -1,1 +1,6 @@
-<p>lealnotice works!</p>
+
+<section class="legal">
+    <h1>Hello World</h1>
+</section>
+  <!-- hier kommt dein Impressum / Datenschutz Inhalt rein -->
+
