--- a/src/style-varibles/_colors.scss
+++ b/src/style-varibles/_colors.scss
@@ -1,3 +1,6 @@
-$dark-blue: #679AAC;
+$dark-blue: #242d78;
 $light-beige: #fdfcfb;
 $accent-orange: #f39200;
+$about-beige:#F8F7E5;
+$skill-black:#1D1D1D;
+$titleName-white: #F8F7E5;
