feat: start animation for Hero componant

--- a/src/app/moduls/components/hero/hero-header/hero-header.component.scss
+++ b/src/app/moduls/components/hero/hero-header/hero-header.component.scss
@@ -45,7 +45,7 @@ header {
       width: 70px;
     }
     span{
-        font-family: monospace;
+        font-family: v.$font-second;
         font-size: 30px;
         font-weight: 900;
         color: c.$titleName-white;
