--- a/src/style-varibles/_variables.scss
+++ b/src/style-varibles/_variables.scss
@@ -1,3 +1,7 @@
 $max-width-content: 192px; 
 $breakpoint-mobile: 768px;
-$padding-0-72: 0 72px;
+$padding-0-72: 0 66px;
+/* style-varibles/_variables.scss */
+
+$font-second: 'QuickFont', serif;   // Für den Look aus deinem Bild (Hanna Schneider)
+$font-premier: 'SpaceFont', monospace; // Für deine Developer-Texte
