--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -15,8 +15,9 @@ section {
 // 1. ANFORDERUNG: Above the Fold immer 100vh
 #hero {
   height: 100vh;
-  min-height: 600px; // Sicherheit für kleine Bildschirme
-  background-color: c.$dark-blue; // Hier lag der Fehler - jetzt korrekt benannt
+  min-height: 600px; 
+@include m.metallic-gradient(c.$dark-blue);
+  padding-bottom:0; 
 }
 
 #about {
@@ -45,6 +46,6 @@ section {
 
 // 2. ANFORDERUNG: Content begrenzt auf z.B. 1440px
 .container {
-  @include m.main-container; // Nutzt das Mixin für max-width: 1440px
+  @include m.main-container; 
   height: 100%;
 }
