feat: All social Media links are now ready

--- a/src/app/moduls/components/hero/hero-header/hero-header-social/hero-header-social.component.html
+++ b/src/app/moduls/components/hero/hero-header/hero-header-social/hero-header-social.component.html
@@ -1,4 +1,8 @@
-<a href="/" class="icon-git" aria-label="Git Hub">
+<a href="https://github.com/AndreasKissner" 
+   class="icon-git" 
+   aria-label="Git Hub"
+   target="_blank" 
+   rel="noopener noreferrer">
   <img
     #gitIcon
     src="assets/img/icons/git.svg"
@@ -8,7 +12,11 @@
   />
 </a>
 
-<a href="/" class="icon-linkedin" aria-label="Linkedin">
+<a href="https://www.linkedin.com/in/andreas-kissner-53557b347/" 
+   class="icon-linkedin" 
+   aria-label="Linkedin"
+   target="_blank" 
+   rel="noopener noreferrer">
   <img
     #linkedinIcon
     src="assets/img/icons/linkedin.svg"
@@ -18,7 +26,7 @@
   />
 </a>
 
-<a href="/" class="icon-mail" aria-label="Mail">
+<a href="#contact" class="icon-mail" aria-label="Mail">
   <img
     #mailIcon
     src="assets/img/icons/mail.svg"
@@ -27,5 +35,4 @@
     alt="Mail Icon"
   />
 </a>
-
 
