--- a/src/app/moduls/components/hero/hero-header/hero-header.component.scss
+++ b/src/app/moduls/components/hero/hero-header/hero-header.component.scss
@@ -10,29 +10,29 @@ header {
   align-items: center;
   padding: v.$padding-0-72;
 
- .header-left {
+  .header-left {
     width: 200px;
     display: flex;
-    justify-content: flex-start; // Icons linksbündig starten
+    justify-content: flex-start;
     align-items: center;
-    gap: 15px; // Erzeugt den Abstand zwischen den Icons
+    gap: 15px;
 
     a {
-      display: flex; // Verhindert Inline-Verschiebungen
+      display: flex;
       align-items: center;
       justify-content: center;
-      width: 30px;  // Feste Breite für den Klickbereich
-      height: 30px; // Feste Höhe für den Klickbereich
-      
+      width: 30px;
+      height: 30px;
+
       img {
-        width: 100%;  // Bild füllt die 30px exakt aus
+        width: 100%;
         height: 100%;
-        object-fit: contain; // Verhindert Verzerrung beim Bildwechsel
-        transition: transform 0.2s ease; // Optional: Kleiner Effekt
+        object-fit: contain;
+        transition: transform 0.2s ease;
       }
 
       &:hover img {
-        transform: scale(1.1); // Optional: Icon wird minimal größer
+        transform: scale(1.1);
       }
     }
   }
@@ -44,15 +44,15 @@ header {
     img {
       width: 70px;
     }
-    span{
-        font-family: v.$font-second;
-        font-size: 30px;
-        font-weight: 900;
-        color: c.$titleName-white;
+
+    span {
+      font-family: v.$font-second;
+      font-size: 30px;
+      font-weight: 900;
+      color: c.$titleName-white;
     }
   }
 }
-
 
 nav {
   display: flex;
