Change folder for header, and language nav

--- a/src/app/moduls/components/about/about.component.html
+++ b/src/app/moduls/components/about/about.component.html
@@ -1,1 +1,6 @@
-<p>about works!</p>
+<app-header></app-header>
+<section class="about-container">
+
+
+<app-pointer-nav></app-pointer-nav>
+</section>
