--- a/src/app/moduls/components/contact/contact.component.html
+++ b/src/app/moduls/components/contact/contact.component.html
@@ -1,1 +1,7 @@
-<p>contact works!</p>
+<app-header></app-header>
+<section class="contact-container">
+
+
+<app-pointer-nav></app-pointer-nav>
+<app-footer></app-footer>
+</section>
