--- a/src/app/moduls/components/references/references.component.html
+++ b/src/app/moduls/components/references/references.component.html
@@ -1,1 +1,6 @@
-<p>references works!</p>
+<app-header></app-header>
+<section class="reference-container">
+
+
+<app-pointer-nav></app-pointer-nav>
+</section>
