--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,12 +1,9 @@
 <header>
   <div class="header-left">
-  <app-hero-header-social></app-hero-header-social>
+ <app-header-social-btn></app-header-social-btn>
   </div>
 
-  <div class="name-middle">
-    <img src="assets/img/logos/ak_logo.webp" alt="" />
-    <span>Kissner</span>
-  </div>
+  <app-logo-name></app-logo-name>
 
   <nav aria-label="Hauptnavigation">
     <app-language-menue></app-language-menue>
