--- a/src/app/shared/pointer-nav/pointer-nav.component.html
+++ b/src/app/shared/pointer-nav/pointer-nav.component.html
@@ -1,8 +1,23 @@
-
+<!-- 
 <div class="section-indicator">
   <img src="assets/img/icons/pointer-nav-karo.svg" alt="current section">
   <img src="assets/img/icons/pointer-nav-circle.svg" alt="section">
   <img src="assets/img/icons/pointer-nav-circle.svg" alt="section">
   <img src="assets/img/icons/pointer-nav-circle.svg" alt="section">
   <img src="assets/img/icons/pointer-nav-circle.svg" alt="section">
+</div>
+ -->
+
+ <div class="section-indicator">
+  @for (loop of ['hero', 'about', 'skills', 'portfolio', 'references', 'contact']; track loop) {
+    
+    <div (click)="observerService.scrollTo(loop)" style="cursor: pointer;">
+   @if (observerService.activeSection() === loop) {
+      <img src="assets/img/icons/pointer-nav-karo.svg" alt="current section">
+    } @else {
+      <img src="assets/img/icons/pointer-nav-circle.svg" alt="section">
+    }
+    </div>
+
+  }
 </div>
