--- a/src/app/moduls/components/hero/hero.component.html
+++ b/src/app/moduls/components/hero/hero.component.html
@@ -1,29 +1,21 @@
-<app-hero-header></app-hero-header>
+<app-header></app-header>
 
 <section class="hero-container">
   <div class="hero-content-hello-btn">
-  
-  <h1>{{ displayText() }}<span class="cursor">|</span></h1>
-  <span>Andreas Kissner</span>
-  <span>Frontend Developer</span>
- 
+    <h1>{{ textService.displayText() }}<span class="cursor">|</span></h1>
+    <span>Andreas Kissner</span>
+    <span>Frontend Developer</span>
 
-
-    <div class="send-messages">
-      <img #mailIcon src="assets/img/icons/sendMessageWhite.svg"
-        (mouseenter)="mailIcon.src = 'assets/img/icons/sendMessageOrange.svg'"
-        (mouseleave)="mailIcon.src = 'assets/img/icons/sendMessageWhite.svg'" alt="Send Message Icon" />
-    </div>
+    <app-primaer-btn></app-primaer-btn>
 
     <div class="scroll-down">
-      <img src="assets/img/icons/scroll-down.svg" alt="" />
+      <a href="#contact">
+        <img src="assets/img/icons/scroll-down.svg" alt="Scroll down to contact" />
+      </a>
     </div>
   </div>
 
-  <div class="hero-images">
-    <img class="profil-bg-img" src="assets/img/icons/profil.bg.svg" alt="">
-    <img class="profil-img" src="assets/img/profil.webp" alt="Hanna Schneider" />
-  </div>
+  <app-profil-image-container></app-profil-image-container>
 
   <app-pointer-nav></app-pointer-nav>
 </section>
