--- a/src/app/moduls/components/portfolio/portfolio.component.html
+++ b/src/app/moduls/components/portfolio/portfolio.component.html
@@ -1,1 +1,6 @@
-<p>portfolio works!</p>
+<app-header></app-header>
+<section class="portfolio-container">
+
+
+<app-pointer-nav></app-pointer-nav>
+</section>
