--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -4,12 +4,19 @@
 
 :host {
   display: block;
+  height: 100vh;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory; // Erzwingt das Einrasten auf der Y-Achse
+  scroll-behavior: smooth;
 }
 
 section {
   width: 100%;
   display: flex;
   justify-content: center;
+  height: 100vh; // Jede Sektion muss genau so hoch wie der Bildschirm sein
+  scroll-snap-align: start; // Rastet am Anfang der Sektion ein
+  scroll-snap-stop: always; // Verhindert, dass man über mehrere Sektionen drüberwischt
 }
 
 // 1. ANFORDERUNG: Above the Fold immer 100vh
@@ -21,27 +28,33 @@ section {
 }
 
 #about {
-  background-color: c.$about-beige; 
+  background-color:c.$about-beige;
+  height: 100vh;
 }
 
 #skills {
   background-color: c.$skill-black;
+  height: 100vh;
 }
 
 #portfolio{
     background-color: c.$about-beige;
+    height: 100vh;
 }
 
 #references{
     background-color: c.$dark-blue;
+    height: 100vh;
 }
 
 #contact{
     background-color: c.$skill-black;
+    height: 100vh;
 }
 
 #footer{
     background-color: c.$skill-black;
+    height: 100vh;
 }
 
 // 2. ANFORDERUNG: Content begrenzt auf z.B. 1440px
