--- a/src/app/shared/primaer-btn/primaer-btn.component.scss
+++ b/src/app/shared/primaer-btn/primaer-btn.component.scss
@@ -1,11 +1,12 @@
- @use 'style-varibles/variables' as v;
+@use 'style-varibles/variables' as v;
 @use 'style-varibles/colors' as c;
 @use 'style-varibles/mixins' as m;
- .send-messages {
-    margin-top: 20px; // Schiebt den Button ein Stück weiter weg vom Text
 
-    img {
-      cursor: pointer;
-      width: 155px; // Falls du die Größe kontrollieren willst
-    }
+.send-messages {
+  margin-top: 20px; 
+
+  img {
+    cursor: pointer;
+    width: 155px; 
   }
+}
