--- a/src/app/shared/header/language-nav/hero-header-nav/hero-header-nav.component.html
+++ b/src/app/shared/header/language-nav/hero-header-nav/hero-header-nav.component.html
@@ -6,29 +6,21 @@
 
 <div class="menu-overlay" [class.active]="isMenuOpen">
   <div class="menu-content">
-    
     <div class="menu-header">
       <h2>Menu</h2>
-      <button class="close-btn" (click)="onClose()">✕</button>
+    <button class="close-btn" (click)="onClose()">
+  <img src="assets/img/icons/xclose.svg" class="close-default" alt="Schließen">
+  <img src="assets/img/icons/xclosered.svg" class="close-active" alt="Schließen Rot">
+</button>
     </div>
 
     <nav class="menu-links">
-  <a href="#about" (click)="onClose()">
-    <span class="icon-sun"></span> About Me
-  </a>
-  <a href="#skillset" (click)="onClose()">
-    <span class="icon-sun"></span> Skillset
-  </a>
-  <a href="#portfolio" (click)="onClose()">
-    <span class="icon-sun"></span> Portfolio
-  </a>
-  <a href="#references" (click)="onClose()">
-    <span class="icon-sun"></span> References
-  </a>
-  <a href="#contact" (click)="onClose()">
-    <span class="icon-sun"></span> Contact me
-  </a>
-</nav>
-
+      <a href="#about" (click)="onClose()"> <span class="icon-sun"></span> About Me </a>
+      <a href="#skillset" (click)="onClose()"> <span class="icon-sun"></span> Skillset </a>
+      <a href="#portfolio" (click)="onClose()"> <span class="icon-sun"></span> Portfolio </a>
+      <a href="#references" (click)="onClose()"> <span class="icon-sun"></span> References </a>
+      <a href="#contact" (click)="onClose()"> <span class="icon-sun"></span> Contact me </a>
+    </nav>
+    <app-header-social-btn class="social-mobile"></app-header-social-btn>
   </div>
 </div>
