--- a/src/app/shared/header/header-social-btn/header-social-btn.component.html
+++ b/src/app/shared/header/header-social-btn/header-social-btn.component.html
@@ -1,38 +1,36 @@
-<a href="https://github.com/AndreasKissner" 
-   class="icon-git" 
-   aria-label="Git Hub"
-   target="_blank" 
-   rel="noopener noreferrer">
-  <img
-    #gitIcon
-    src="assets/img/icons/git.svg"
-    (mouseenter)="gitIcon.src = 'assets/img/icons/gitOrange.svg'"
-    (mouseleave)="gitIcon.src = 'assets/img/icons/git.svg'"
-    alt="Git Icon"
-  />
-</a>
+<div class="social-btn-container">
+  
+  <a href="https://github.com/AndreasKissner" class="social-link" target="_blank"
+     (mouseenter)="gitHover.set(true)" (mouseleave)="gitHover.set(false)">
+    @if (gitHover()) {
+      <img src="assets/img/icons/gitOrange.svg" class="img-desktop" alt="Git">
+    } @else {
+      <img src="assets/img/icons/git.svg" class="img-desktop" alt="Git">
+    }
+    <img src="assets/img/icons/gitblack.svg" class="img-mobile black" alt="Git">
+    <img src="assets/img/icons/gitOrange.svg" class="img-mobile orange-mobile" alt="Git">
+  </a>
 
-<a href="https://www.linkedin.com/in/andreas-kissner-53557b347/" 
-   class="icon-linkedin" 
-   aria-label="Linkedin"
-   target="_blank" 
-   rel="noopener noreferrer">
-  <img
-    #linkedinIcon
-    src="assets/img/icons/linkedin.svg"
-    (mouseenter)="linkedinIcon.src = 'assets/img/icons/linkedinOrange.svg'"
-    (mouseleave)="linkedinIcon.src = 'assets/img/icons/linkedin.svg'"
-    alt="Linkedin Icon"
-  />
-</a>
+  <a href="https://www.linkedin.com/in/andreas-kissner-53557b347/" class="social-link" target="_blank"
+     (mouseenter)="linkedInHover.set(true)" (mouseleave)="linkedInHover.set(false)">
+    @if (linkedInHover()) {
+      <img src="assets/img/icons/linkedinOrange.svg" class="img-desktop" alt="LinkedIn">
+    } @else {
+      <img src="assets/img/icons/linkedin.svg" class="img-desktop" alt="LinkedIn">
+    }
+    <img src="assets/img/icons/linkedinblack.svg" class="img-mobile black" alt="LinkedIn">
+    <img src="assets/img/icons/linkedinOrange.svg" class="img-mobile orange-mobile" alt="LinkedIn">
+  </a>
 
-<a href="#contact" class="icon-mail" aria-label="Mail">
-  <img
-    #mailIcon
-    src="assets/img/icons/mail.svg"
-    (mouseenter)="mailIcon.src = 'assets/img/icons/mailOrange.svg'"
-    (mouseleave)="mailIcon.src = 'assets/img/icons/mail.svg'"
-    alt="Mail Icon"
-  />
-</a>
+  <a href="#contact" class="social-link"
+     (mouseenter)="mailHover.set(true)" (mouseleave)="mailHover.set(false)">
+    @if (mailHover()) {
+      <img src="assets/img/icons/mailOrange.svg" class="img-desktop" alt="Mail"> 
+    } @else {
+      <img src="assets/img/icons/mail.svg" class="img-desktop" alt="Mail">
+    }
+    <img src="assets/img/icons/emailblack.svg" class="img-mobile black" alt="Mail">
+    <img src="assets/img/icons/mailOrange.svg" class="img-mobile orange-mobile" alt="Mail">
+  </a>
 
+</div>
