feat: All components from hero - contact base ist make

--- a/src/app/moduls/components/hero/hero.component.html
+++ b/src/app/moduls/components/hero/hero.component.html
@@ -3,7 +3,7 @@
 <section class="hero-container">
   <div class="hero-content-hello-btn">
     <h1>{{ textService.displayText() }}<span class="cursor">|</span></h1>
-    <span>Andreas Kissner</span>
+    <p class="name-my">Andreas Kissner</p>
     <span>Frontend Developer</span>
 
     <app-primaer-btn></app-primaer-btn>
