--- a/src/app/moduls/components/hero/hero.component.scss
+++ b/src/app/moduls/components/hero/hero.component.scss
@@ -11,17 +11,23 @@
 }
 
 .hero-container {
-  flex: 1;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  gap: 100px;
-  max-width: 1200px;
-  margin: auto;
-  position: relative;
-  padding: v.$padding-0-20;
+    flex: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 1150px;
+    margin: auto;
+    position: relative;
+    padding: 0 10px;
+
+     .name-my{
+      font-size: 54px;
+      font-family: f.$font-premier;
+      color: c.$titleName-white;
+    }
 }
+
 
 .hero-content-hello-btn {
   height: 75%;
@@ -58,7 +64,7 @@
 
   span {
     display: block; // Damit die Spans untereinander stehen
-    font-size: 40px;
+    font-size: 24px;
     font-family: f.$font-premier;
     color: c.$titleName-white;
     font-weight: 100;
@@ -68,7 +74,7 @@
     margin-top: 35px; // Drückt das Scroll-Icon ganz nach unten im Container
 
     img {
-      height: 144px;
+      height: 100px;
     }
   }
 }
