feat: Make Hero side Responsin

--- a/src/app/moduls/components/hero/hero.component.html
+++ b/src/app/moduls/components/hero/hero.component.html
@@ -3,17 +3,19 @@
 <section class="hero-container">
   <div class="hero-content-hello-btn">
     <h1>{{ textService.displayText() }}<span class="cursor">|</span></h1>
-    <p class="name-my">Andreas Kissner</p>
+    <p class="name-my">Andreas</p>
+    <p class="name-my">Kissner</p>
     <span>Frontend Developer</span>
 
     <app-primaer-btn></app-primaer-btn>
 
-    <div class="scroll-down">
+     <div class="scroll-down">
       <a href="#contact">
-        <img src="assets/img/icons/scroll-down.svg" alt="Scroll down to contact" />
+        <img  src="assets/img/icons/scroll-down.svg" alt="Scroll down to contact" />
       </a>
     </div>
   </div>
+ 
 
   <app-profil-image-container></app-profil-image-container>
 
