--- a/src/app/shared/header/language-nav/language-menue/language-menue.component.html
+++ b/src/app/shared/header/language-nav/language-menue/language-menue.component.html
@@ -1,3 +1,4 @@
+<section class="language-icons">
 @if (isGerman) {
   <a (click)="toggleLanguage()" class="icon-de" style="cursor: pointer" aria-label="Switch to English">
     <img
@@ -19,3 +20,4 @@
     />
   </a>
 }
+</section>
