--- a/src/app/moduls/components/hero/hero.component.scss
+++ b/src/app/moduls/components/hero/hero.component.scss
@@ -11,39 +11,75 @@
 }
 
 .hero-container {
-    flex: 1;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    max-width: 1150px;
-    margin: auto;
-    position: relative;
-    padding: 0 10px;
+  flex: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 1540px;
+  margin: auto;
+  position: relative;
+  padding: 0 10px;
+  @media(max-width:570px){
+    padding: 0 20px;
+  }
 
-     .name-my{
-      font-size: 54px;
-      font-family: f.$font-premier;
-      color: c.$titleName-white;
+  .name-my {
+    font-size: 96px;
+    font-weight: 899;
+    font-family: f.$font-second;
+    color: c.$titleName-white;
+    line-height: 1;
+    @media (max-width: 925px) {
+      font-size: 85px;
     }
+
+    @media (max-width: 840px) {
+      font-size: 60px;
+    }
+
+     @media (max-width: 570px) {
+      font-size: 40px;
+    }
+  }
 }
 
-
 .hero-content-hello-btn {
-  height: 75%;
+  height: 500px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 4px;
   z-index: 10;
 
+  @media (max-width: 840px) {
+    height: 330px;
+    justify-content: flex-end;
+  }
+  @media (max-width: 640px) {
+    height: 220px;
+  }
+  @media (max-width: 321px) {
+    height: 230px;
+    gap:0;
+  }
+
   h1 {
     font-family: f.$font-second;
     color: c.$titleName-white;
-    font-size: 24px;
-    font-weight: 900;
+    font-size: 48px;
+    font-weight: 100;
     display: flex;
     align-items: center;
+    @media (max-width: 925px) {
+      font-size: 40px;
+    }
+    @media (max-width: 640px) {
+      font-size: 24px;
+    }
+       @media (max-width: 640px) {
+      font-size: 18px;
+    }
 
     .cursor {
       margin-left: 4px;
@@ -63,18 +99,54 @@
   }
 
   span {
-    display: block; // Damit die Spans untereinander stehen
-    font-size: 24px;
-    font-family: f.$font-premier;
+    display: block;
+    font-size: 48px;
+    font-family: f.$font-second;
     color: c.$titleName-white;
     font-weight: 100;
+    @media (max-width: 925px) {
+      font-size: 40px;
+    }
+    @media (max-width: 840px) {
+      font-size: 20px;
+    }
   }
 
   .scroll-down {
-    margin-top: 35px; // Drückt das Scroll-Icon ganz nach unten im Container
+    margin-top: 79px;
+  @media(max-width:925px){
+    position: relative;
+    top: 23px;
+  }
+
+   @media(max-width:840px){
+    position: relative;
+    top: 159px;
+  }
+
+
+    @media(max-width:640px){
+    position: relative;
+    top: 215px;
+  }
+
+       @media(max-width:570px){
+    position: relative;
+    top:180px;
+    right:10px;
+  }
+
+  @media(max-width:321px){
+    top: 130px;
+    right: 5px;
+  }
+ 
 
     img {
-      height: 100px;
+      height: 144px;
+      @media(max-width:640px){
+   height: 80px;
+  }
     }
   }
 }
