--- a/src/app/moduls/components/hero/profil-image-container/profil-image-container.component.scss
+++ b/src/app/moduls/components/hero/profil-image-container/profil-image-container.component.scss
@@ -1,9 +1,12 @@
 :host {
   position: absolute;
   bottom: 0;
-  right: 190px; 
+  right: 290px; 
   z-index: 5;
   max-height: 100%;
+  @media(max-width:1250px){
+    right: 170px;
+  }
 }
 
 .hero-images {
@@ -11,43 +14,95 @@
   display: flex;
   align-items: flex-end;
   position: relative;
+  @media(max-width:530px){
+    left:100px
+  }
+    @media(max-width:420px){
+    left:170px
+  }
+     @media(max-width:350px){
+    left:190px;
+    padding-right:20px;
+  }
+     @media(max-width:321px){
+    left:176px;
+    padding-right:20px;
+  }
+
 
   .profil-img {
     width: 100%;
-    max-width: 421px;
+    max-width: 560px;
     height: auto;
-
     object-fit: contain;
     display: block;
     z-index: 7;
+     @media(max-width:1150px){
+      max-width: 480px;
+    }
 
-    @media (max-width: 949px) {
-      max-width: 370px;
+    @media (max-width: 992px) {
+      max-width: 400px;
+    }
+                @media(max-width:640px){
+      max-width:380px;
+    }
+                @media(max-width:520px){
+    width:280px;
+    }
+
+                  @media(max-width:520px){
+    width:259px;
     }
   }
+    
 }
 
 .profil-bg-img {
     position: absolute;
-    bottom: 168px;
-    right: -66px;
+    bottom: 227px;
+    right: -103px;
     z-index: 6;
-    width: 324px;
-    max-height: 100%;
+    width: 471px;
     object-fit: contain;
 
-  @media (max-width: 949px) {
-    bottom: 150px;
-    right: 10px;
-    width: 180px;
+      @media(max-width:1150px){
+      max-width: 370px;
+      right:-55px;
+    }
+
+  @media (max-width: 992px) {
+    bottom: 244px;
+    right: -62px;
+    width: 291px;
+  }
+
+  @media(max-width:640px){
+    bottom: 203px;
+    right: -24px;
+    width: 240px;
+  }
+  @media(max-width:520px){
+    bottom: 199px;
+    right: 21px;
+    width: 173px;
+  }
+   @media(max-width:321px){
+    bottom: 162px;
+    right: 21px;
+    width: 155px;
   }
 }
 .profil-bg-img-2 {
-  position: absolute;
-  bottom: 3%;
-  right: 220px;
-  z-index: 6;
-  width: 250px;
-  max-height: 100%;
-  object-fit: contain;
+    position: absolute;
+    bottom: -5px;
+    right: 290px;
+    z-index: 6;
+    width: 366px;
+    max-height: 100%;
+    object-fit: contain;
+
+    @media(max-width:1150px){
+      display: none;
+    }
 }
