refactor: Responsiv refactor in Hero Component

--- a/src/app/shared/header/language-nav/hero-header-nav/hero-header-nav.component.html
+++ b/src/app/shared/header/language-nav/hero-header-nav/hero-header-nav.component.html
@@ -9,8 +9,8 @@
     <div class="menu-header">
       <h2>Menu</h2>
     <button class="close-btn" (click)="onClose()">
-  <img src="assets/img/icons/xclose.svg" class="close-default" alt="Schließen">
-  <img src="assets/img/icons/xclosered.svg" class="close-active" alt="Schließen Rot">
+  <img src="assets/img/icons/xClose/xclose.svg" class="close-default" alt="Schließen">
+  <img src="assets/img/icons/xClose/xclosered.svg" class="close-active" alt="Schließen Rot">
 </button>
     </div>
 
