--- a/src/style-varibles/_colors.scss
+++ b/src/style-varibles/_colors.scss
@@ -1,6 +1,6 @@
 $dark-blue: #242d78;
 $light-beige: #fdfcfb;
 $accent-orange: #f39200;
-$about-beige:#939282;
+$about-beige:#6f6e69;
 $skill-black:#1D1D1D;
 $titleName-white: #F8F7E5;
