--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -6,7 +6,7 @@
   display: block;
   height: 100vh;
   height: 100dvh; // Dynamic Viewport Height - passt sich der Browser-UI an
- 
+  overflow-y: scroll;
   scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
 }
